[package]
name = "module"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
# js-sys = "0.3.66"
wasm-bindgen = "0.2.89"
# humantime = "2.1"

# [dependencies.web-sys]
# version = "0.3.66"
# features = [
#   'CanvasRenderingContext2d',
#   'Document',
#   'Element',
#   'HtmlCanvasElement',
#   'Window',
#   'Performance',
#   'PerformanceTiming'
# ]